--- a/.gitignore
+++ b/.gitignore
@@ -135,3 +135,8 @@ GitHub.sublime-settings
 !.vscode/launch.json 
 !.vscode/extensions.json 
 .history
+
+# random files
+Cartiere.kml
+cartiere.json
+kml_parser.py
