--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,15 @@
 asgiref==3.5.2
 backports.zoneinfo==0.2.1
+certifi==2022.6.15
+charset-normalizer==2.1.0
 Django==4.0.6
 django-cors-headers==3.13.0
 djangorestframework==3.13.1
+idna==3.3
 lxml==4.9.1
 pytz==2022.1
+requests==2.28.1
 Shapely==1.8.2
+six==1.16.0
 sqlparse==0.4.2
+urllib3==1.26.11
