--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ django-cors-headers==3.13.0
 djangorestframework==3.13.1
 idna==3.3
 lxml==4.9.1
+mysqlclient==2.1.1
 pytz==2022.1
 requests==2.28.1
 Shapely==1.8.2
