--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ certifi==2022.6.15
 charset-normalizer==2.1.0
 Django==4.0.6
 django-cors-headers==3.13.0
+django-crontab==0.7.1
 djangorestframework==3.13.1
 idna==3.3
 lxml==4.9.1
