--- a/requirements.txt
+++ b/requirements.txt
@@ -2,13 +2,15 @@ asgiref==3.5.2
 backports.zoneinfo==0.2.1
 certifi==2022.6.15
 charset-normalizer==2.1.0
-Django==4.0.6
+Django==3.2
 django-cors-headers==3.13.0
 django-crontab==0.7.1
 djangorestframework==3.13.1
 idna==3.3
 lxml==4.9.1
+mssql-django==1.1.3
 mysqlclient==2.1.1
+pyodbc==4.0.34
 pytz==2022.1
 requests==2.28.1
 Shapely==1.8.2
