--- a/requirements.txt
+++ b/requirements.txt
@@ -5,11 +5,19 @@ Django==3.2
 django-cors-headers==3.13.0
 django-crontab==0.7.1
 djangorestframework==3.13.1
+exceptiongroup==1.2.1
+gunicorn==22.0.0
 idna==3.3
+iniconfig==2.0.0
 mysqlclient==2.1.1
+packaging==24.0
+pluggy==1.5.0
+pytest==8.2.2
+pytest-django==4.8.0
 pytz==2022.1
 requests==2.28.1
 Shapely==1.8.2
 six==1.16.0
 sqlparse==0.4.2
+tomli==2.0.1
 urllib3==1.26.11
